--- a/games/game3.html
+++ b/games/game3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Poland vs. Finland</title>
+  <title>Latvia vs. Slovenia</title>
   <link rel="stylesheet" href="../style.css">
   <style>
     /* Light green background for the page */
@@ -92,8 +92,8 @@
   <img src="../images/Fibafriendly.png" alt="Competition Logo" class="competition-logo">
 
   <main>
-    <h1>Poland vs Finland</h1>
-    <p>Date: 17. August 2025</p>
+    <h1>Latvia vs. Slovenia</h1>
+    <p>Date: 16. August 2025</p>
     <p>International Friendly</p>
 
     <!-- Logos -->
