--- a/games/game3.html
+++ b/games/game3.html
@@ -99,27 +99,22 @@
     <!-- Logos -->
     <div class="team-logos">
       <div>
-        <img src="../images/Poland.png" alt="Team1Logo">
+        <img src="../images/LET.png" alt="Team1Logo">
       </div>
       <div>
-        <img src="../images/Finland.png" alt="Team2Logo">
+        <img src="../images/SVN.png" alt="Team2Logo">
       </div>
     </div>
 
     <!-- Final Score -->
-    <p class="score">POLAND <span class="score-number">88 – 97</span> FINLAND</p>
+    <p class="score">LATVIA <span class="score-number">100 – 88</span> SLOVENIA</p>
 
     <!-- Top Stats -->
     <h2>Statistics</h2>
     <ul>
-      <li>TOP SCORER: Lauri MARKKANEN (42)</li>
-      <li>REBOUNDS: Lauri MARKKNANEN (12)</li>
-      <li>ASSISTS: Andrzej PLUTA (6)</li>
-      <li>RATING: Lauri MARKKANEN (10)</li>
-    </ul>
 
     <!-- Full Stats Team A -->
-    <h2>POLAND Stats</h2>
+    <h2>LATVIA Stats</h2>
     <table>
       <tr>
         <th>Player</th>
@@ -128,36 +123,7 @@
         <th>Assists</th>
         <th>Rating</th>
       </tr>
-      <tr>
-        <td>Aleksander BALCEROWSKI</td>
-        <td>17</td>
-        <td>4</td>
-        <td>0</td>
-        <td>6.7</td>
-      </tr>
-      <tr>
-        <td>Mateusz PONITKA</td>
-        <td>12</td>
-        <td>5</td>
-        <td>5</td>
-        <td>7.1</td>
-      </tr>
-      <tr>
-        <td>Dominik OLEJNICZAK</td>
-        <td>11</td>
-        <td>6</td>
-        <td>0</td>
-        <td>6.7</td>
-      </tr>
-      <tr>
-        <td>Przemyslaw ZOLNIEREWICZ</td>
-        <td>11</td>
-        <td>1</td>
-        <td>0</td>
-        <td>6.4</td>
-      </tr>
-    </table>
-
+      
     <!-- Full Stats Team B -->
     <h2>FINLAND Stats</h2>
     <table>
@@ -168,28 +134,6 @@
         <th>Assists</th>
         <th>Rating</th>
       </tr>
-      <tr>
-        <td>Lauri MARKKANEN</td>
-        <td>42</td>
-        <td>12</td>
-        <td>0</td>
-        <td>10</td>
-      </tr>
-      <tr>
-        <td>Olivier NKAMHOUA</td>
-        <td>12</td>
-        <td>5</td>
-        <td>4</td>
-        <td>7.4</td>
-      </tr>
-      <tr>
-        <td>Sasu SALIN</td>
-        <td>11</td>
-        <td>0</td>
-        <td>4</td>
-        <td>6.9</td>
-      </tr>
-    </table>
 
     <a href="../index.html" class="back-link">Back to all games</a>
   </main>
