--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <li data-competition="EuroBasket Qualifiers"><a href="games/game1.html" data-date="2025-08-15">Team A vs Team B</a></li>
     <li data-competition="International Friendly"><a href="games/game2.html" data-date="2025-08-17">Poland vs Finland</a></li>
     <li data-competition="World Cup Qualifiers"><a href="games/game3.html" data-date="2025-08-18">Team E vs Team F</a></li>
+    <li data-competition="International Friendly"><a href="games/game3.html" data-date="2025-08-16">Latvia vs Slovenia</a></li>
   </ul>
 
   <script>
@@ -155,3 +156,4 @@
   </script>
 </body>
 </html>
+
