--- a/competitions/friendly.html
+++ b/competitions/friendly.html
@@ -4,6 +4,26 @@
   <meta charset="UTF-8">
   <title>International Friendly</title>
   <link rel="stylesheet" href="../style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    .game {
+      margin: 5px 0;
+      padding: 8px;
+      border-radius: 6px;
+      background: #f4f4f4;
+    }
+    .game a {
+      text-decoration: none;
+      color: #333;
+    }
+    select {
+      padding: 6px;
+      margin-bottom: 15px;
+    }
+  </style>
 </head>
 <body>
   <h1>International Friendly</h1>
@@ -32,13 +52,14 @@
     function filterBySeason(startYear) {
       seasonGames.innerHTML = "";
 
-      // Define season range
-      const startDate = new Date(`${startYear}-08-02`); // Aug 2 of start year
-      const endDate = new Date(`${startYear + 1}-08-01`); // Aug 1 next year
+      // Define season range: Aug 2 startYear → Aug 1 nextYear
+      const startDate = new Date(startYear, 7, 2); // Month is 0-indexed: August = 7
+      const endDate = new Date(startYear + 1, 7, 1);
 
       allGames.forEach(game => {
         const link = game.querySelector("a");
-        const gameDate = new Date(link.getAttribute("data-date"));
+        const dateParts = link.getAttribute("data-date").split("-");
+        const gameDate = new Date(dateParts[0], dateParts[1] - 1, dateParts[2]);
 
         if (gameDate >= startDate && gameDate <= endDate) {
           const li = document.createElement("li");
@@ -56,7 +77,7 @@
     // Initial filter
     filterBySeason(parseInt(seasonSelect.value));
 
-    // On season change
+    // Update when season changes
     seasonSelect.addEventListener("change", () => {
       filterBySeason(parseInt(seasonSelect.value));
     });
