--- a/competitions/friendly.html
+++ b/competitions/friendly.html
@@ -14,19 +14,15 @@
 <body>
   <h1>International Friendly</h1>
 
-  <!-- SEASON SELECTOR -->
   <label for="seasonSelect">Select Season:</label>
   <select id="seasonSelect">
     <option value="2024">2024/25</option>
     <option value="2025">2025/26</option>
   </select>
 
-  <!-- Results -->
   <ul id="seasonGames"></ul>
 
-  <!-- Hidden game list -->
   <ul id="gameList" style="display:none;">
-    <!-- 2025/26 games -->
     <li data-date="2025-08-16"><a href="games/game3.html">Latvia vs Slovenia</a></li>
     <li data-date="2025-08-17"><a href="games/game2.html">Poland vs Finland</a></li>
   </ul>
@@ -36,6 +32,11 @@
     const seasonSelect = document.getElementById("seasonSelect");
     const seasonGames = document.getElementById("seasonGames");
 
+    function parseDate(dateStr) {
+      const [year, month, day] = dateStr.split("-");
+      return new Date(year, month - 1, day);
+    }
+
     function filterBySeason(startYear) {
       seasonGames.innerHTML = "";
 
@@ -44,7 +45,7 @@
 
       allGames.forEach(game => {
         const link = game.querySelector("a");
-        const gameDate = new Date(link.getAttribute("data-date") + "T00:00:00");
+        const gameDate = parseDate(link.getAttribute("data-date"));
 
         if (gameDate >= startDate && gameDate <= endDate) {
           const li = document.createElement("li");
