--- a/competitions/friendly.html
+++ b/competitions/friendly.html
@@ -26,8 +26,8 @@
   <!-- Hidden game list -->
   <ul id="gameList" style="display:none;">
     <!-- paths fixed to root/games/ folder -->
-    <li data-date="2025-08-16"><a href="games/game3.html">Latvia vs Slovenia</a></li>
-    <li data-date="2025-08-17"><a href="games/game2.html">Poland vs Finland</a></li>
+    <li data-date="2025-08-16"><a href="../games/game3.html">Latvia vs Slovenia</a></li>
+    <li data-date="2025-08-17"><a href="../games/game2.html">Poland vs Finland</a></li>
   </ul>
 
   <script>
