--- a/competitions/friendly.html
+++ b/competitions/friendly.html
@@ -28,6 +28,7 @@
     <!-- paths fixed to root/games/ folder -->
     <li data-date="2025-08-16"><a href="../games/game3.html">Latvia vs Slovenia</a></li>
     <li data-date="2025-08-17"><a href="../games/game2.html">Poland vs Finland</a></li>
+    <li data-date="2025-08-19"><a href="../games/game4.html">Slovenia vs Great Britain</a></li>
   </ul>
 
   <script>
