--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   <ul id="gameList" style="display:none;">
     <li data-competition="International Friendly"><a href="games/game2.html" data-date="2025-08-17">Poland vs Finland</a></li>
     <li data-competition="International Friendly"><a href="games/game3.html" data-date="2025-08-16">Latvia vs Slovenia</a></li>
+    <li data-competition="International Friendly"><a href="games/game4.html" data-date="2025-08-19">Slovenia vs Great Britain</a></li>
   </ul>
 
   <script>
@@ -128,3 +129,4 @@
   </script>
 </body>
 </html>
+
