--- a/games/game4.html
+++ b/games/game4.html
@@ -96,7 +96,7 @@
     <!-- Logos -->
     <div class="team-logos">
       <div>
-        <img src="../images/Slovenia.png" alt="Slovenia Logo">
+        <img src="../images/SVN.png" alt="Slovenia Logo">
       </div>
       <div>
         <img src="../images/GB.png" alt="Great Britain Logo">
