--- a/games/game4.html
+++ b/games/game4.html
@@ -99,7 +99,7 @@
         <img src="../images/SVN.png" alt="Slovenia Logo">
       </div>
       <div>
-        <img src="../images/GB.png" alt="Great Britain Logo">
+        <img src="../images/UK.png" alt="Great Britain Logo">
       </div>
     </div>
 
