--- a/games/game4.html
+++ b/games/game4.html
@@ -104,15 +104,15 @@
     </div>
 
     <!-- Final Score -->
-    <p class="score">SLOVENIA <span class="score-number">91 – 75</span> GREAT BRITAIN</p>
+    <p class="score">SLOVENIA <span class="score-number">93 – 81</span> GREAT BRITAIN</p>
 
     <!-- Top Stats -->
     <h2>Statistics</h2>
     <ul>
-      <li>TOP SCORER: Luka DONČIĆ (28)</li>
-      <li>REBOUNDS: Mike TOBI (11)</li>
-      <li>ASSISTS: Luka DONČIĆ (9)</li>
-      <li>RATING: Luka DONČIĆ (9.8)</li>
+      <li>TOP SCORER: Luka DONCIC (28)</li>
+      <li>REBOUNDS: Myles HESSON (8)</li>
+      <li>ASSISTS: Luka DONCIC (10)</li>
+      <li>RATING: Luka DONČIĆ (9.1)</li>
     </ul>
 
     <!-- Full Stats Slovenia -->
@@ -125,14 +125,20 @@
         <th>Assists</th>
         <th>Rating</th>
       </tr>
-      <tr><td>Luka DONČIĆ</td><td>28</td><td>7</td><td>9</td><td>9.8</td></tr>
-      <tr><td>Klemen PREPELIČ</td><td>15</td><td>2</td><td>3</td><td>7.6</td></tr>
-      <tr><td>Vlatko ČANČAR</td><td>12</td><td>6</td><td>2</td><td>7.2</td></tr>
-      <tr><td>Mike TOBI</td><td>10</td><td>11</td><td>1</td><td>7.8</td></tr>
-      <tr><td>Zoran DRAGIĆ</td><td>9</td><td>3</td><td>2</td><td>6.9</td></tr>
-      <tr><td>Gregor GLAS</td><td>7</td><td>1</td><td>0</td><td>6.4</td></tr>
-      <tr><td>Žiga DIMEC</td><td>6</td><td>4</td><td>0</td><td>6.5</td></tr>
-      <tr><td>Aleksander SEKULIĆ</td><td>4</td><td>2</td><td>1</td><td>6.0</td></tr>
+      <tr><td>Luka DONCIC</td><td>28</td><td>6</td><td>10</td><td>9.1</td></tr>
+      <tr><td>Klemen PREPELIC</td><td>15</td><td>3</td><td>3</td><td>7.1</td></tr>
+      <tr><td>Gregor HROVAT</td><td>15</td><td>3</td><td>3</td><td>7.5</td></tr>
+      <tr><td>Edo MURIC</td><td>9</td><td>2</td><td>0</td><td>7.0</td></tr>
+      <tr><td>Luka SCUKA</td><td>7</td><td>6</td><td>1</td><td>6.6</td></tr>
+      <tr><td>Alen OMIC</td><td>6</td><td>6</td><td>0</td><td>6.8</td></tr>
+      <tr><td>Martin KRAMPELJ</td><td>5</td><td>0</td><td>0</td><td>6.2</td></tr>
+      <tr><td>Aleksej NIKOLIC</td><td>3</td><td>0</td><td>1</td><td>6.3</td></tr>
+      <tr><td>Rok RADOVIC</td><td>3</td><td>4</td><td>0</td><td>6.4</td></tr>
+      <tr><td>Leon STERGAR</td><td>3</td><td>2</td><td>0</td><td>6.3</td></tr>
+      <tr><td>Miha CERKVENIK</td><td>2</td><td>4</td><td>1</td><td>6.4</td></tr>
+      <tr><td>Robert JURKOVIC</td><td>0</td><td>4</td><td>0</td><td>6.0</td></tr>
+      <tr><td>Mark PADJEN</td><td>0</td><td>0</td><td>2</td><td>6.0</td></tr>
+      <tr><td>Zak SMREKAR</td><td>0</td><td>0</td><td>1</td><td>6.2</td></tr>
     </table>
 
     <!-- Full Stats Great Britain -->
