--- a/games/game4.html
+++ b/games/game4.html
@@ -161,7 +161,7 @@
       <tr><td>Jacob ROUND</td><td>2</td><td>1</td><td>0</td><td>5.7</td></tr>
     </table>
 
-    <a href="/index.html" class="back-link">Back to all games</a>
+    <a href="../index.html" class="back-link">Back to all games</a>
   </main>
 
 </body>
